--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 	<head>
 		<title>Amiibo API</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel='stylesheet' href='styles/site-syles.css'/>
+		<link rel='stylesheet' href='styles/site-styles.css'/>
 		<link rel='stylesheet' href='index.css'/>
 		<meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 	</head>
 	<body>
- 
+    <div class="banner">
+      <h1>Welcome to the Amiibo API</h1>
+    </div>
     <div class="footer-container">
       <footer><a href="https://github.com/DallinKooyman/AmiiboAPI">Github Repo for this site</a></footer>
     </div>
