--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
     <div class="banner">
       <h1>Welcome to the Amiibo API</h1>
     </div>
+    
+    <div id="input-area">
+      <form>
+        <label> Enter an Amiibo's name</label> 
+        <input type="text" id="amiiboName" value=""/>
+        <br/>
+        <input id="amiiboSubmit" type="submit" value="Look up this amiibo"></input>
+      </form>
+
+
+    </div> 
+    <div id="result">
+
+    </div>
+
     <div class="footer-container">
       <footer><a href="https://github.com/DallinKooyman/AmiiboAPI">Github Repo for this site</a></footer>
     </div>
+    <script text="type/javascript" src="/script.js"></script>
 	</body>
 </html>
