Add header info for amiibo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="input-area">
       <form>
         <label> Enter an Amiibo's name</label> 
-        <input id="amiiboName" type="text"  value=""/>
+        <input id="amiiboName" type="text"  value="Zelda"/>
         <br/>
         <input id="amiiboNameSubmit" type="submit" value="Look up this amiibo"></input>
       </form>
