--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="result">
 
     </div>
-
+    <div class="footer-spacer"></div>
+    
     <div class="footer-container">
       <footer><a href="https://github.com/DallinKooyman/AmiiboAPI">Github Repo for this site</a></footer>
     </div>
