Add amiibo logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
     <div class="banner">
-      <h1>Welcome to the Amiibo API</h1>
+      <h1>Welcome to the Amiibo API!</h1>
     </div>
     
     <div id="input-area">
@@ -25,7 +25,7 @@
 
     </div>
     <div class="footer-spacer"></div>
-    
+
     <div class="footer-container">
       <footer><a href="https://github.com/DallinKooyman/AmiiboAPI">Github Repo for this site</a></footer>
     </div>
