--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</head>
 	<body>
     <div class="banner">
-      <h1>Welcome to the Amiibo API!</h1>
+      <h1>Welcome to the <img src="amiibo.png"/> API!</h1>
     </div>
     
     <div id="input-area">
       <form>
         <label> Enter an Amiibo's name</label> 
-        <input id="amiiboName" type="text"  value="Zelda"/>
+        <input id="amiiboName" type="text" value="Zelda"/>
         <br/>
         <input id="amiiboNameSubmit" type="submit" value="Look up this amiibo"></input>
       </form>
