Add credit to site, Remove default value in form, Remove input after success

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div class="banner">
       <h1>Welcome to the <img src="amiibo.png"/> API!</h1>
     </div>
+
+    <div id="credit">
+      <h3>Get info on an amiibo from <a href="https://amiiboapi.com/">amiiboapi.com!</a></h3>
+    </div>
     
     <div id="input-area">
       <form>
         <label> Enter an Amiibo's name</label> 
-        <input id="amiiboName" type="text" value="Zelda"/>
+        <input id="amiiboName" type="text" value=""/>
         <br/>
         <input id="amiiboNameSubmit" type="submit" value="Look up this amiibo"></input>
       </form>
