--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         <input id="amiiboNameSubmit" type="submit" value="Look up this amiibo"></input>
       </form>
     </div> 
-    <div id="result">
-
-    </div>
+    <div id="result"></div>
+    
     <div class="footer-spacer"></div>
 
     <div class="footer-container">
